Fix comment icon alignment; fixes #2

--- a/less/style.less
+++ b/less/style.less
@@ -402,9 +402,15 @@ h1, h2, h3 {
 	font-size: 12px;
 	font-size: 1.2rem;
 	.small-caps;
-	.icon {
+	.read .icon {
+		font-size: 20px;
 		float: left;
-		margin-top: 2px;
+		margin-top: -1px;
+		margin-right: 7px;
+	}
+	.add .icon {
+		float: left;
+		margin-top: 1px;
 		margin-right: 5px;
 	}
 }
